test/integration/bad/tuples/bad_unpack7.stan
model {
  tuple(real, tuple(int, real)) tup;
  (tup.2.2, tup) = (1.5, (2.3, (4,5.5)));
}
